--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,12 @@ jobs:
           INPUT_PAT: ${{ secrets.OPEN_VSX_TOKEN }}
         with:
           pat: ${{ secrets.OPEN_VSX_TOKEN }}
-      - run: npm ci
       - name: Publish to Visual Studio Marketplace
         uses: HaaLeo/publish-vscode-extension@v0
         env:
-          INPUT_PAT: ${{ secrets.VS_MARKETPLACE_TOKEN }}
+          INPUT_PAT: ${{ secrets.VSCE_TOKEN }}
         with:
-          pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
+          pat: ${{ secrets.VSCE_TOKEN }}
           registryUrl: https://marketplace.visualstudio.com
           extensionFile: ${{ steps.publishToOpenVSX.outputs.vsixPath }}
           packagePath: ''
