Make "Gwion" be the language name that shows in lower right of status bar

--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
 					".gw"
 				],
 				"aliases": [
-					"gw",
-					"gwion"
+					"Gwion",
+					"gwion",
+					"gw"
 				],
 				"configuration": "./language-configuration.json"
 			}
