--- a/package.json
+++ b/package.json
@@ -1,63 +1,61 @@
 {
-	"name": "gwion",
-	"displayName": "Gwion",
-	"publisher": "Gwion",
-	"description": "Strongly-timed musical programming language",
-	"repository": {
-		"url": "https://github.com/Gwion/vscode"
-	},
-	"icon": "Gwion.png",
-	"version": "0.2.3",
-	"engines": {
-		"vscode": "^1.56.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [],
-	"main": "./out/extension.js",
-	"contributes": {
-		"languages": [
-			{
-				"id": "gwion",
-				"extensions": [
-					".gw"
-				],
-				"aliases": [
-					"Gwion",
-					"gwion",
-					"gw"
-				],
-				"configuration": "./language-configuration.json"
-			}
-		],
-		"grammars": [
-			{
-				"language": "gwion",
-				"scopeName": "source.gwion",
-				"path": "./syntaxes/gw.tmGrammar.json"
-			}
-		]
-	},
-	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run compile && npm run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/vscode": "^1.56.0",
-		"@types/glob": "^7.1.3",
-		"@types/mocha": "^8.2.2",
-		"@types/node": "14.x",
-		"eslint": "^7.27.0",
-		"@typescript-eslint/eslint-plugin": "^4.26.0",
-		"@typescript-eslint/parser": "^4.26.0",
-		"glob": "^7.1.7",
-		"mocha": "^10.0.0",
-		"typescript": "^4.3.2",
-		"vscode-test": "^1.5.2"
-	}
+    "publisher": "Gwion",
+    "name": "gwion-lsp",
+    "description": "A VS Code Gwion plugin that runs gwiond.",
+    "author": "the Gwion team",
+    "license": "MIT",
+    "version": "1.0.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Gwion/gwiond"
+    },
+    "categories": [],
+    "keywords": [
+        "multi-root ready"
+    ],
+    "contributes": {
+        "languages": [
+            {
+                "id": "gwion",
+                "aliases": [
+                   "Gwion",
+                   "gwion",
+                   "gw"
+                ],
+                "extensions": [
+                    ".gw"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+            "grammars": [
+                     {
+                             "language": "gwion",
+                             "scopeName": "source.gwion",
+                             "path": "./syntaxes/gw.tmGrammar.json"
+                     }
+             ]
+    },
+    "engines": {
+        "vscode": "^1.52.0"
+    },
+    "main": "./out/extension",
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -b",
+        "watch": "tsc -b -w"
+    },
+    "devDependencies": {
+        "@types/node": "^16.11.7",
+        "@types/node-fetch": "^2.6.11",
+        "@types/vscode": "^1.86.0",
+        "npm": "^7.0.0",
+        "typescript": "^4.8.4"
+    },
+    "dependencies": {
+        "node-fetch": "^2.7.0",
+        "vscode-languageclient": "^9.0.1",
+        "vscode-languageserver": "^9.0.1",
+        "vscode-languageserver-textdocument": "^1.0.11"
+    }
 }
