--- a/package.json
+++ b/package.json
@@ -45,8 +45,12 @@
     ],
     "scripts": {
         "vscode:prepublish": "npm run compile",
-        "compile": "tsc -b",
-        "watch": "tsc -b -w"
+        "compile": "tsc -b ./",
+        "watch": "tsc -b -w ./o",
+        "pretest": "npm run compile && npm run lint",
+        "lint": "eslint src --ext ts",
+        "test": "node ./out/test/runTest.js",
+        "postinstall": "cd client && npm install"
     },
     "devDependencies": {
         "@types/node": "^16.11.7",
