--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
         "pretest": "npm run compile && npm run lint",
         "lint": "eslint src --ext ts",
         "test": "node ./out/test/runTest.js",
-        "postinstall": "cd client && npm install"
+        "postinstall": "npm install"
     },
     "devDependencies": {
         "@types/node": "^16.11.7",
