--- a/package.json
+++ b/package.json
@@ -51,17 +51,19 @@
         "lint": "eslint src --ext ts",
         "test": "node ./out/test/runTest.js"
     },
-    "devDependencies": {
-        "@types/vscode": "^1.56.0",
-        "@types/glob": "^7.1.3",
-        "@types/mocha": "^8.2.2",
-        "@types/node": "14.x",
-        "eslint": "^7.27.0",
-        "@typescript-eslint/eslint-plugin": "^4.26.0",
-        "@typescript-eslint/parser": "^4.26.0",
-        "glob": "^7.1.7",
-        "mocha": "^8.4.0",
-        "typescript": "^4.3.2",
-        "vscode-test": "^1.5.2"
-    }
+            "dependencies": {
+                "node-fetch": "^2.7.0",
+                "vscode-languageclient": "^9.0.1",
+                "vscode-languageserver": "^9.0.1",
+                "vscode-languageserver-textdocument": "^1.0.11"
+            },
+            "devDependencies": {
+                "@types/node-fetch": "^2.6.11",
+                "npm": "^7.0.0",
+                "typescript": "^4.8.4"
+            },
+            "engines": {
+                "vscode": "^1.86.0"
+            }
+
 }
