--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     },
     "devDependencies": {
         "@types/node-fetch": "^2.6.11",
+        "@types/vscode": "^1.86.0",
         "npm": "^7.0.0",
         "typescript": "^4.8.4"
     }
