--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "vscode-languageserver-textdocument": "^1.0.11"
     },
     "devDependencies": {
+        "@types/node": "^16.11.7",
         "@types/node-fetch": "^2.6.11",
         "@types/vscode": "^1.86.0",
         "npm": "^7.0.0",
