--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "@types/node": "^16.11.7",
         "@types/node-fetch": "^2.6.11",
         "@types/vscode": "^1.86.0",
+        "@vscode/test-electron": "^2.3.9",
         "npm": "^7.0.0",
         "typescript": "^4.8.4"
     }
