--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "@types/node-fetch": "^2.6.11",
         "@types/vscode": "^1.86.0",
         "@vscode/test-electron": "^2.3.9",
+        "mocha": "^10.3.0",
         "npm": "^7.0.0",
         "typescript": "^4.8.4",
         "vscode-test": "^1.6.1"
