--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@types/node-fetch": "^2.6.11",
         "@types/vscode": "^1.86.0",
         "@vscode/test-electron": "^2.3.9",
+        "jest": "^29.7.0",
         "mocha": "^10.3.0",
         "npm": "^7.0.0",
         "typescript": "^4.8.4",
