try with test repo package files

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "scripts": {
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -b",
-        "watch": "tsc -b -w",
+        "watch": "tsc -b -w"
     },
     "devDependencies": {
         "@types/node": "^16.11.7",
