--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "watch": "tsc -b -w"
     },
     "devDependencies": {
+        "@types/mocha": "^10.0.6",
         "@types/node": "^16.11.7",
         "@types/node-fetch": "^2.6.11",
         "@types/vscode": "^1.52.0",
