--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "A VS Code Gwion plugin that runs gwiond.",
     "author": "the Gwion team",
     "license": "MIT",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "repository": {
         "type": "git",
-        "url": "https://github.com/Gwion/gwiondr"
+        "url": "https://github.com/Gwion/gwiond"
     },
     "categories": [],
     "keywords": [
