--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
     "name": "gwion",
+    "displayName": "Gwion",
     "publisher": "Gwion",
     "description": "A VS Code Gwion plugin that runs gwiond.",
     "author": "the Gwion team",
     "license": "MIT",
-    "version": "1.1.0",
+    "version": "1.1.1",
+    "icon": "Gwion.png",
+
     "repository": {
         "type": "git",
         "url": "https://github.com/Gwion/gwiond"
